Fix height and width flex stretching

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,12 @@
 	font-family: roboto, Verdana, sans-serif;
 }
 
+body {
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+}
+
 body, h1, h2, h3, ul {
 	margin: 0;
 	padding: 0;
@@ -38,10 +44,6 @@ button,
 	font-weight: 600;
 }
 
-.set-width {
-	max-width: 1200px;
-}
-
 .header,
 .welcome,
 .footer {
@@ -65,6 +67,17 @@ button,
 	justify-content: center;
 }
 
+.set-width {
+	max-width: 1100px;
+	flex: 1;
+}
+
+.welcome,
+.gallery,
+.quote,
+.call-to-action {
+	flex: 1;
+}
 
 .welcome img {
 	max-width: 500px;
